--- a/index.html
+++ b/index.html
@@ -291,16 +291,16 @@
                 mediaType: 'audio',
                 mediaSource: 'https://res.ioe.vn/edu/EOlympic/ExamData/ImageExam/2015/3/6/635612508036199228_Audio.mp3',
                 options: [
-                    { text: 'A. on weekends', isCorrect: true },
-                    { text: 'B. on weekdays', isCorrect: false },
+                    { text: 'A. on weekends', isCorrect: false },
+                    { text: 'B. on weekdays', isCorrect: true },
                     { text: 'C. on Wednesday', isCorrect: false },
                     { text: 'D. on Monday', isCorrect: false }
                 ],
-                correctAnswer: 'A. on weekends',
+                correctAnswer: 'B. on weekdays',
                 correctAnswer_vi: 'vào cuối tuần',
                 hint_vi: 'Lắng nghe xem cô ấy sẽ KHÔNG gọi vào lúc nào.',
-                rationale_vi: 'Audio có thể nói rằng cô ấy sẽ gọi vào các ngày trong tuần, suy ra cô ấy sẽ không gọi vào cuối tuần.',
-                rationale_en: 'The audio likely states she will call on weekdays, implying she won\'t call on weekends.',
+                rationale_vi: 'Audio có thể nói rằng cô ấy sẽ gọi vào các ngày trong tuần, suy ra cô ấy sẽ không gọi vào ngày trong tuần.',
+                rationale_en: 'The audio likely states she will call on weekdays, implying she won\'t call on weekdays.',
             },
             {
                 type: 'mc',
@@ -335,12 +335,12 @@
                 mediaSource: 'https://res.ioe.vn/edu/EOlympic/ExamData/ImageExam/2016/2/25/635920009305191753_Audio.mp3',
                 options: [
                     { text: 'A. two months ago', isCorrect: false },
-                    { text: 'B. two years ago', isCorrect: true },
+                    { text: 'B. two years ago', isCorrect: false },
                     { text: 'C. two days ago', isCorrect: false },
-                    { text: 'D. two weeks ago', isCorrect: false }
+                    { text: 'D. two weeks ago', isCorrect: true }
                 ],
-                correctAnswer: 'B. two years ago',
-                correctAnswer_vi: 'hai năm trước',
+                correctAnswer: 'D. two weeks ago',
+                correctAnswer_vi: 'hai tuần trước',
                 hint_vi: 'Lắng nghe kỹ khoảng thời gian được nhắc đến.',
                 rationale_vi: 'Audio có thể đề cập đến một sự kiện cách đây hai năm. Cần nghe kỹ để xác nhận.',
                 rationale_en: 'The audio likely mentions an event from two years ago. Careful listening is required.',
@@ -407,7 +407,7 @@
             {
                 type: 'rearrange',
                 question: '30. Sắp xếp các từ/cụm từ sau thành câu đúng:',
-                words: ['on', 'bus around Hanoi.', 'The boys spent', 'all day', 'travelling by'],
+                words: ['bus around Hanoi.', 'The boys spent', 'all day', 'travelling by'],
                 correctAnswer: 'The boys spent all day travelling by bus around Hanoi.',
                 correctAnswer_vi: 'Các cậu bé đã dành cả ngày đi du lịch bằng xe buýt quanh Hà Nội.',
                 hint_vi: 'Cấu trúc: S + spent + time + V-ing.',
@@ -809,11 +809,11 @@
                 question: '65. In the story, there was a princess living in the _ _ _ _ _ _ .',
                 mediaType: 'audio',
                 mediaSource: 'https://res.ioe.vn/edu/EOlympic/ExamData/ImageExam/2019/2/22/636864381057509638_Audio.mp3',
-                correctAnswer: 'castle',
-                correctAnswer_vi: 'lâu đài',
+                correctAnswer: 'jungle',
+                correctAnswer_vi: 'rứng sâu, rừng rậm ( nghe có vẻ lạ nhỉ)',
                 hint_vi: 'Công chúa thường sống ở đâu? (6 ký tự)',
-                rationale_vi: 'Trong các câu chuyện cổ tích, công chúa (princess) thường sống trong lâu đài (castle).',
-                rationale_en: 'In fairy tales, a princess typically lives in a castle.',
+                rationale_vi: 'Trong các câu chuyện cổ tích, công chúa (princess) thường sống trong jungle.',
+                rationale_en: 'In fairy tales, a princess typically lives in a jungle.',
             },
             {
                 type: 'rearrange',
@@ -917,12 +917,12 @@
                 mediaSource: 'https://res.ioe.vn/edu/EOlympic/ExamData/ImageExam/2016/2/25/635920007777310650_Audio.mp3',
                 options: [
                     { text: 'A. 200', isCorrect: false },
-                    { text: 'B. 2000', isCorrect: false },
-                    { text: 'C. 3000', isCorrect: true },
+                    { text: 'B. 2000', isCorrect: true },
+                    { text: 'C. 3000', isCorrect: false },
                     { text: 'D. 4000', isCorrect: false }
                 ],
-                correctAnswer: 'C. 3000',
-                correctAnswer_vi: '3000 năm',
+                correctAnswer: 'B. 2000',
+                correctAnswer_vi: '2000 năm',
                 hint_vi: 'Lắng nghe kỹ con số được nhắc đến trong audio.',
                 rationale_vi: 'Cần nghe audio để xác định chính xác số năm. Đáp án thường là một con số lớn.',
                 rationale_en: 'Careful listening is required to identify the correct number from the audio.',
